@@ -1,7 +1,7 @@
 // qmidinet.cpp
 //
 /****************************************************************************
-   Copyright (C) 2010-2023, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2010-2024, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -74,9 +74,9 @@ qmidinetApplication::qmidinetApplication ( int& argc, char **argv, bool bGUI )
 		//	QMIDINET_TITLE " - " + QObject::tr(QMIDINET_SUBTITLE));
 	#if QT_VERSION >= QT_VERSION_CHECK(5, 7, 0)
 		pApp->setDesktopFileName(
-			QString("org.rncbc.%1").arg(PACKAGE_TARNAME));
+			QString("org.rncbc.%1").arg(PROJECT_NAME));
 	#endif
-		QString sVersion(CONFIG_BUILD_VERSION);
+		QString sVersion(PROJECT_VERSION);
 		sVersion += '\n';
 		sVersion += QString("Qt: %1").arg(qVersion());
 	#if defined(QT_STATIC)
@@ -488,7 +488,7 @@ void qmidinetSystemTrayIcon::about (void)
 	QString sText = "<h1>" QMIDINET_TITLE "</h1>\n";
 	sText += "<p>" + tr(QMIDINET_SUBTITLE) + "<br />\n";
 	sText += "<br />\n";
-	sText += tr("Version") + ": <b>" CONFIG_BUILD_VERSION "</b><br />\n";
+	sText += tr("Version") + ": <b>" PROJECT_VERSION "</b><br />\n";
 //	sText += "<small>" + tr("Build") + ": " CONFIG_BUILD_DATE "</small><br />\n";
 	if (!list.isEmpty()) {
 		sText += "<small><font color=\"red\">";
