@@ -8,6 +8,8 @@ GIT HEAD
 
 - Add Unique/Single instance support. (EXPERIMENTAL)
 
+- Updated copyright headers into the New Year (2024).
+
 
 0.9.11  2023-09-09  An End-of-Summer'23 Release.
 
